--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
                 position: absolute;
                 left: 0;
                 right: 0;
-                up: 0;
-                down: 0;
+                top: 0;
+                bottom: 0;
                 margin: auto;
                 max-width: 96%;
                 max-height: 96%;
@@ -28,8 +28,10 @@
     </head>
     <body>
         <canvas id='screen' width='1280' height='720'></canvas>
+        <script src='data/card.json' type='text/javascript'></script>
         <script src='script/asset.js'></script>
         <script src='script/ui.js'></script>
+        <script src='script/data.js'></script>
 
         <script src='script/shape.js'></script>
         <script src='script/card.js'></script>
