--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,13 @@
         <script src='script/ui.js'></script>
         <script src='script/data.js'></script>
 
-        <script src='script/shape.js'></script>
         <script src='script/card.js'></script>
         <script src='script/unit.js'></script>
         <script src='script/player.js'></script>
         <script src='script/adventure.js'></script>
+        <script src='script/shop.js'></script>
         <script src='script/battle.js'></script>
+        <script src='script/battleplayer.js'></script>
 
         <script src='script/render.js'></script>
         <script src='script/util.js'></script>
@@ -46,6 +47,7 @@
 
         <script src='script/scenetitle.js'></script>
         <script src='script/scenebattle.js'></script>
+        <script src='script/scenecollection.js'></script>
 
         <script src='script/main.js'></script>
     </body>
