--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
         <script src='script/util.js'></script>
         <script src='script/game.js'></script>
 
+        <script src='script/window/windowui.js'></script>
+        <script src='script/window/windowmenu.js'></script>
         <script src='script/scenetitle.js'></script>
         <script src='script/scenebattle.js'></script>
         <script src='script/scenecollection.js'></script>
