--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,23 @@
     <body>
         <canvas id='screen' width='1280' height='720'></canvas>
         <script src='data/card.json' type='text/javascript'></script>
+        <script src='data/crystal.json' type='text/javascript'></script>
+        <script src='data/equipment.json' type='text/javascript'></script>
+        <script src='data/bookmark.json' type='text/javascript'></script>
+
         <script src='script/asset.js'></script>
         <script src='script/ui.js'></script>
         <script src='script/data.js'></script>
 
         <script src='script/card.js'></script>
+        <script src='script/crystal.js'></script>
         <script src='script/unit.js'></script>
         <script src='script/player.js'></script>
         <script src='script/adventure.js'></script>
         <script src='script/shop.js'></script>
         <script src='script/battle.js'></script>
         <script src='script/battleplayer.js'></script>
+        <script src='script/battlehandler.js'></script>
 
         <script src='script/render.js'></script>
         <script src='script/util.js'></script>
