--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
 
         <script src='script/window/windowui.js'></script>
         <script src='script/window/windowmenu.js'></script>
+        <script src='script/window/windownext.js'></script>
         <script src='script/scenetitle.js'></script>
         <script src='script/scenebattle.js'></script>
         <script src='script/scenecollection.js'></script>
